--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-    <h1>Sbumag</h1>
+    <h1>Our menu</h1>
     
 </body>
 </html>
