--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <h1>Our menu</h1>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-4 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quaerat maiores voluptates earum blanditiis eveniet. Consequatur magnam debitis iste praesentium corrupti fuga cupiditate dolore! Aliquam eveniet modi illum quo rem.</div>
+          <div class="col-lg-4 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quaerat maiores voluptates earum blanditiis eveniet. Consequatur magnam debitis iste praesentium corrupti fuga cupiditate dolore! Aliquam eveniet modi illum quo rem.</div>
+          <div class="col-lg-4 col-md-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quaerat maiores voluptates earum blanditiis eveniet. Consequatur magnam debitis iste praesentium corrupti fuga cupiditate dolore! Aliquam eveniet modi illum quo rem.</div>
+        </div>
+      </div>
     
 </body>
 </html>
